--- a/ARDemo/AndroidManifest.xml
+++ b/ARDemo/AndroidManifest.xml
@@ -3,7 +3,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.googlecode.ardemo"
           android:versionCode="1"
-          android:versionName="1.0">
+          android:versionName="1.0"
+          android:installLocation="auto">
 
     <supports-screens android:anyDensity="true"
                       android:resizeable="true"
